# fipe_rs

./: .gitignore  Cargo.toml  README.md
.github/: FUNDING.yml
src/: config.rs  label.rs  loads.rs  main.rs  menu.rs  schema.rs  selects.rs  sql.rs  ui.rs  utils.rs
