[package]
name = "fipe_rs"
version = "1.0.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde_json = "1.0.149"
owo-colors = "4.2.3"
rand = "0.9.2"
inquire = "0.9.3"
indicatif = "0.18.3"
chrono = "0.4.43"
